force-app/main/default/objects/LicenseType_Required_CE__c/LicenseType_Required_CE__c.object-meta.xml
<CustomObject>
    <description>PacPoint-KN08122020-Created for PVL CE and INS</description>
    <label>License Type / Education Subjects</label>
    <nameField>
        <displayFormat>CE-{00000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Type / Required CE</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>