force-app/main/default/objects/LicenseType_Required_CE__c/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <description>PacPoint-KN08122020-Created for PVL CE and INS</description>
    <label>License Type</label>
    <referenceTo>LicenseType__c</referenceTo>
    <relationshipLabel>Education Subjects</relationshipLabel>
    <relationshipName>License_Type_Required_CE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>