force-app/main/default/objects/LicenseType_Required_CE__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipName>License_Type_Required_CE</relationshipName>
    <type>Lookup</type>
</CustomField>