force-app/main/default/objects/LicenseType_Required_CE__c/fields/SubjectBiennium__c.field-meta.xml
<CustomField>
    <fullName>SubjectBiennium__c</fullName>
    <formula>Subject__r.Biennium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Biennium</label>
    <type>Text</type>
</CustomField>