force-app/main/default/objects/LicenseType_Required_CE__c/fields/SubjectExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>SubjectExpirationDate__c</fullName>
    <formula>Subject__r.ExpirationDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Expiration Date</label>
    <type>Date</type>
</CustomField>