force-app/main/default/objects/LicenseType_Required_CE__c/fields/SubjectStatus__c.field-meta.xml
<CustomField>
    <fullName>SubjectStatus__c</fullName>
    <formula>TEXT(Subject__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Status</label>
    <type>Text</type>
</CustomField>